@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-01T01:40:54Z",
-  "count" : 4,
+  "timestamp" : "2022-06-14T08:20:01Z",
+  "count" : 3,
   "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -0, +4 ],
+  "count_decinc" : [ -1, +4 ],
   "uniques" : 3,
   "uniques_minmax" : [ 1, 3 ],
   "uniques_decinc" : [ -0, +3 ]
