@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-14T01:40:57Z",
+  "timestamp" : "2022-06-14T08:20:01Z",
   "count_outdated" : 329,
   "uniques_outdated" : 185,
   "count" : 357,
-  "uniques" : 204,
+  "uniques" : 205,
   "clones" : [
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "count_minmax": [ 1, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
